erDiagram
    direction LR

    USERS ||--o{ SESSIONS : authenticates
    USERS ||--o{ COURSES : owns
    COURSES ||--o{ PROJECTS : has
    PROJECTS ||--o{ TASKS : has

    USERS {
        int id PK
        string name
        string email UK
        string password_hash
        timestamp created_at
    }

    SESSIONS {
        string session_id_hash PK
        int user_id FK "ON DELETE CASCADE"
        json session_data
        datetime expires_at
        timestamp created_at
        timestamp updated_at
    }

    COURSES {
        int id PK
        int user_id FK "ON DELETE CASCADE"
        string name
    }

    PROJECTS {
        int id PK
        int course_id FK "ON DELETE CASCADE"
        string title
        text description "Nullable"
        date due_date
    }

    TASKS {
        int id PK
        int project_id FK "ON DELETE CASCADE"
        string title
        text description "Nullable"
        string status "todo | in-progress | done"
        date due_date
    }
